[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Tiros/round_mk1/round_mk1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objetos/Tiros/Shoot_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Particulas/Explosion2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sons/Bullet_Collision.wav" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 8, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 18.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "EXPLODED",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=11]

[node name="round_mk1" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
frame = 3
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]

[node name="Sound_Collision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
bus = "Shot Sound"

[node name="RangeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_round_mk1_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="Sound_Collision" to="." method="_on_Sound_Collision_finished"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_RangeTimer_timeout"]
